Update translations and add username and password fields

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,5 +1,5 @@
 {
 	"jablotron adapter settings": "Adaptereinstellungen für jablotron",
-	"option1": "Option 1",
-	"option2": "Option 2"
+	"username": "Benutzername",
+	"password": "Kennwort"
 }
