--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,5 +1,5 @@
 {
 	"jablotron adapter settings": "Adapter settings for jablotron",
-	"option1": "option1",
-	"option2": "option2"
+	"username": "Username",
+	"password": "Password"
 }
