switched to Jablotron REST API

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,5 +1,6 @@
 {
 	"jablotron adapter settings": "Adaptereinstellungen für jablotron",
 	"username": "Benutzername",
-	"password": "Kennwort"
+	"password": "Kennwort",
+	"pollInterval": "Abfrageintervall (in Sekunden)"
 }
