--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,5 +1,6 @@
 {
 	"jablotron adapter settings": "Adapter settings for jablotron",
 	"username": "Username",
-	"password": "Password"
+	"password": "Password",
+	"pollInterval": "Polling interval (in seconds)"
 }
