--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,5 +1,6 @@
 {
-	"jablotron adapter settings": "Ajustes del adaptador para jablotron",
-	"option1": "Opción 1",
-	"option2": "opcion 2"
+	"jablotron adapter settings": "Adapter settings for jablotron",
+	"username": "Username",
+	"password": "Password",
+	"pollInterval": "Polling interval (in seconds)"
 }
