--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,5 +1,6 @@
 {
-	"jablotron adapter settings": "Configurações do adaptador para jablotron",
-	"option1": "Opção 1",
-	"option2": "opção 2"
+	"jablotron adapter settings": "Adapter settings for jablotron",
+	"username": "Username",
+	"password": "Password",
+	"pollInterval": "Polling interval (in seconds)"
 }
