--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -2,5 +2,6 @@
 	"jablotron adapter settings": "Adapter settings for jablotron",
 	"username": "Username",
 	"password": "Password",
-	"pollInterval": "Polling interval (in seconds)"
+	"pollInterval": "Polling interval (in seconds)",
+	"labelRead": "Select data segments to be read from server:"
 }
